[package]
name = "miausu-pp"
version = "1.1.3"
edition = "2024"
authors = ["9down <artemyakovle2.0@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/noemiowo/miausu-pp-rs"
description = "Difficulty and performance calculation for osu!"
keywords = ["osu", "pp", "stars", "performance", "difficulty"]

[features]
default = []
raw_strains = []
sync = []
tracing = ["rosu-map/tracing"]

[dependencies]
rosu-map = { version = "0.2.0" }
rosu-mods = { version = "0.2.0" }

[dev-dependencies]
proptest = "1.4.0"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
